--- a/wp-content/themes/mitm/assets/sass/global/_variables.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_variables.scss
@@ -34,11 +34,17 @@ $StrongMagenta: #b318ac !default;
 
 $body-bg: white !default;
 $BgColor: 	#2b292a;
+$BgColor2: 	#808080;
+
 
 $BdColor:	#c7c7c7;
 $BdColor2:	#b4b4b2;
+$BdColor3:	#666;
 
 $text-color: $Gray;
+$text-color2: #333;
+
+
 $site-width: 1170px;
 
 // Links
