--- a/wp-content/themes/mitm/assets/css/jquery.bxslider.css
+++ b/wp-content/themes/mitm/assets/css/jquery.bxslider.css
@@ -13,11 +13,11 @@
 /* * RESET AND LAYOUT
 =================================== */
 
-.bx-wrapper { position: relative; margin: 0 auto 10px; padding: 0; *zoom: 1; }
+.bx-wrapper { position: relative; margin: 0 auto 14px; padding: 0; *zoom: 1; }
 .bx-wrapper img { max-width: 100%; display: block; }
 /* * THEME
 =================================== */
-.bx-wrapper .bx-viewport { -moz-box-shadow: 0 0 5px #ccc; -webkit-box-shadow: 0 0 5px #ccc; box-shadow: 0 0 5px #ccc; border: 5px solid #fff; left: -5px; background: #fff; /* fix other elements on the page moving (on Chrome) */
+.bx-wrapper .bx-viewport {   background: #fff; /* fix other elements on the page moving (on Chrome) */
 -webkit-transform: translatez(0); -moz-transform: translatez(0); -ms-transform: translatez(0); -o-transform: translatez(0); transform: translatez(0); }
 .bx-wrapper .bx-pager, .bx-wrapper .bx-controls-auto { position: absolute; bottom: -30px; width: 100%; }
 /* LOADER */
@@ -25,7 +25,7 @@
 /* PAGER */
 .bx-wrapper .bx-pager { text-align: center; font-size: .85em; font-family: Arial; font-weight: bold; color: #666; padding: 0px 0; }
 .bx-wrapper .bx-pager .bx-pager-item, .bx-wrapper .bx-controls-auto .bx-controls-auto-item { display: inline-block; *zoom: 1; *display: inline; }
-.bx-wrapper .bx-pager.bx-default-pager a { background: url(../images/pager.png) no-repeat center -50px; text-indent: -9999px; display: block; width: 50px; height: 50px; margin: 0 5px; outline: 0; }
+.bx-wrapper .bx-pager.bx-default-pager a { background: url(../images/pager.png) no-repeat center -50px; text-indent: -9999px; display: block; width: 50px; height: 46px; margin: 0 9px; outline: 0; }
 .bx-wrapper .bx-pager.bx-default-pager a:hover, .bx-wrapper .bx-pager.bx-default-pager a.active { background: url(../images/pager.png) no-repeat center 0; }
 /* DIRECTION CONTROLS (NEXT / PREV) */
 .bx-wrapper .bx-prev { left: 10px; background: url(images/controls.png) no-repeat 0 -32px; }
