--- a/wp-content/themes/mitm/assets/sass/bootstrap/mixins/_tab-focus.scss
+++ b/wp-content/themes/mitm/assets/sass/bootstrap/mixins/_tab-focus.scss
@@ -2,7 +2,7 @@
 
 @mixin tab-focus() {
   // Default
-  outline: thin dotted;
+//  outline: thin dotted;
   // WebKit
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
