--- a/wp-content/themes/mitm/assets/sass/global/_components.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_components.scss
@@ -61,6 +61,7 @@
 
 a {
     text-decoration: none;
+    outline: 0 none;
     &.more {
         @extend %Raleway;
         font-size: 15px;
@@ -68,19 +69,7 @@ a {
         background-color: $Orange;
         clear: both;
         display: table;
-        padding: 2px 10px 0 0;
-        span {
-            color: $White;
-            background-color: $Black;
-            font-family: arial;
-            font-size: 20px;
-            font-weight: 400;
-            height: 20px;
-            line-height: 5px;
-            margin: 0px 5px 0 0;
-            padding: 6px 15px 7px;
-            width: 20px;
-        }
+        
         &:hover {
             text-decoration: none;
             color: $Black;
@@ -103,13 +92,43 @@ td {
     border-left: 12px solid $White;
 }
 
+%input-text {
+    border: 1px solid $BdColor3;
+    background: $BgColor2;
+    @extend %text-center;
+    color: $White;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+.input-text::-webkit-.input-placeholder {
+    color: $text-color2;
+    font-style: italic;
+}
+
+.input-text:-moz-placeholder {
+    color: $text-color2;
+    font-style: italic;
+}
+
+.input-text::-moz-placeholder {
+    color: $text-color2;
+    font-style: italic;
+}
+
+.input-text:-ms-input-placeholder {
+    color: $text-color2;
+    font-style: italic;
+}
+
 .button {
-    @include border_radius(13px);
+    @include border_radius(1px);
     @include transition(all 0.3s ease);
+    @extend %Raleway;
     background-color: rgba(255, 255, 255, 0.2);
     border: 2px solid $White;
-    font-size: 13px;
-    padding: 17px 41px;
+    font-size: 16px;
+    padding: 7px 0;
     text-align: center;
     color: $White;
     letter-spacing: 1px;
@@ -129,11 +148,30 @@ td {
         }
     }
     &.orange {
-        background-color: rgba($Orange, 0.5);
+        background-color: $Orange;
         border-color: $Orange;
-        color: $Orange;
+        color: $White;
         &:hover {
             background-color: rgba($Orange, 0.7);
+        }
+    }
+}
+
+.social-links {
+    
+    a {
+        display: inline-block;
+        text-indent: 99999px;
+        margin-right: 18px;
+        @include size(47px, 48px);
+        &.facebook {
+            @include bg-img-center(fb, png);
+        }
+        &.twitter {
+            @include bg-img-center(twt, png);
+        }
+        &.pinterest {
+            @include bg-img-center(pinterest, png);
         }
     }
 }
