--- a/wp-content/themes/mitm/assets/sass/global/_fonts.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_fonts.scss
@@ -6,6 +6,7 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,300);
 
 @import url(http://fonts.googleapis.com/css?family=Lobster);
+@import url(http://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700,700italic);
 
 %merriweather {
     font-family: 'Merriweather', serif;
@@ -13,6 +14,9 @@
 
 %Lobster {
     font-family: 'Lobster', cursive;
+}
+%Lobstertwo {
+    font-family: 'Lobster Two', cursive;
 }
 
 %Raleway {
