--- a/wp-content/themes/mitm/assets/sass/global/_header.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_header.scss
@@ -5,15 +5,17 @@
 .site-header {
     @include clearfix;
     font-size: 13px;
-    padding-bottom: 10px;
+     
     .wrapper {
         padding: 10px 0 0 71px;
         position: relative;
     }
     .header-section {
-        padding: 0 20px 0 40px;
+        padding: 0 ;
+
         .logo {
-            margin-top: 13px;
+            margin: 14px 0 0 56px; 
+            
             @extend %pull-left;
             a {
                 @include size(78px, 83px);
@@ -26,13 +28,13 @@
         }
         // Main Navigation
         .main-navigation {
+            padding: 0;
+            margin: 5px 35px 0 0;
             @extend %pull-right;
-            list-style-type: none;
-            padding: 5px 0 0;
             @extend %Raleway;
             li {
-                margin: 0 18px;
-                padding: 20px 0;
+                margin: 0 20px 0 27px;
+                padding: 34px 0 0;
                 @extend %pull-left;
                 @include transition(all 0.5s ease);
                 a {
@@ -52,27 +54,10 @@
                     @include bg-img-center(orange_arrow, png);
                     @include size(100px, auto);
                     a {
-                        padding: 10px 0px;
+                        padding: 10px 0px 25px;
                     }
                 }
             }
-        }
-    }
-    .contact-info {
-        @extend %merriweather;
-        font-size: 13px;
-        color: $White;
-        .col {
-            width: 50%;
-        }
-        .email {}
-    }
-    @media (max-width: $screen-sm-min) {
-        .contact-info {
-            border: 1px solid red;
-            @include size(768px, 340px);
-            @include bg-img-center(contact-ng, png);
-            background-size: 100%;
         }
     }
 }
