--- a/wp-content/themes/mitm/assets/sass/global/_typography.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_typography.scss
@@ -11,45 +11,14 @@
 }
 
 %heading-level-3 {
-    @include font-shorthand(38px, normal, 58px);
+    @include font-shorthand(28px, normal, 28px);
+    @extend %Lobstertwo;
+    font-style: italic;
 }
-
-%heading-level-4 {
-    @include font-shorthand(36px, normal, 58px);
+%heading-level-3 {
+     
 }
-
-%heading-level-5 {
-    @include font-shorthand(34px, normal, 58px);
-}
-
-%heading-level-6 {
-    @include font-shorthand(32px, normal, 58px);
-}
-
-%heading-level-7 {
-    @include font-shorthand(30px, normal, 58px);
-}
-
-%heading-level-8 {
-    @include font-shorthand(28px, normal, 58px);
-}
-
-%heading-level-9 {
-    @include font-shorthand(26px, normal, 58px);
-}
-
-%heading-level-10 {
-    @include font-shorthand(24px, normal, 58px);
-}
-
-%heading-level-11 {
-    @include font-shorthand(22px, normal, 58px);
-}
-
-%heading-level-12 {
-    @include font-shorthand(20px, normal, normal);
-}
-
+ 
 // Pharagraph
 //------------------------------
 
@@ -86,7 +55,7 @@
     @extend %merriweather;
     font-size: 21px; 
     font-weight: 400;
-    line-height: 34px;
+    line-height: 36px;
 }
 
 strong {
@@ -98,14 +67,14 @@ em {
     font-style: italic;
 }
 
-p {
+/*p {
     @extend %pharagraph-level-5;
     line-height: 1.7em;
     padding-bottom: 25px;
     &.wp-caption-text {
         text-align: center;
     }
-}
+}*/
 
 ol,ul,p {
     a {
@@ -164,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.5em;
     margin-bottom: 5px;
 }
-
+/*
 h1 {
     @extend %heading-level-10;
 }
@@ -187,4 +156,4 @@ h5 {
 
 h6 {
     @extend %pharagraph-level-3;
-}
+}*/
