--- a/wp-content/themes/mitm/assets/sass/global/_header.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_header.scss
@@ -135,7 +135,8 @@
                 a {
                     color: $Black;
                     font-size: 16px;
-                    padding: 20px 20px 10px;
+                    margin: 0 10px;
+                    padding: 20px 10px 7px;
                     display: block;
                     text-transform: uppercase;
                     text-decoration: none;
