Studio page completed

--- a/wp-content/themes/mitm/assets/sass/global/_fonts.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_fonts.scss
@@ -22,3 +22,13 @@
 %Raleway {
     font-family: 'Raleway', sans-serif;
 }
+%MyriadPro {
+    font-family: 'Myriad Pro Regular';
+}
+
+@font-face {
+font-family: 'Myriad Pro Regular';
+font-style: normal;
+font-weight: normal;
+src: local('Myriad Pro Regular'), url('../fonts/MYRIADPRO-REGULAR.woff') format('woff');
+}
