--- a/wp-content/themes/mitm/assets/sass/global/_variables.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_variables.scss
@@ -35,15 +35,23 @@ $StrongMagenta: #b318ac !default;
 $body-bg: white !default;
 $BgColor: 	#2b292a;
 $BgColor2: 	#808080;
+$BgColor3: 	#f5f5f5;
 
 
 $BdColor:	#c7c7c7;
 $BdColor2:	#b4b4b2;
 $BdColor3:	#666;
+$BdColor4:	#8e8e8e;
+$BdColor5:	#e6e6e6;
+$BdColor6:	#d0d0d0;
+
+
+
 
 $text-color: $Gray;
 $text-color2: #333;
-
+$text-color3: #555555;
+$text-color4: #B3B3B3;
 
 $site-width: 1170px;
 
