--- a/wp-content/themes/mitm/assets/sass/global/_typography.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_typography.scss
@@ -56,7 +56,7 @@
 
 %pharagraph-level-7 {
     @extend %Raleway;
-    @include font-shorthand(12px, normal, normal);
+    @include font-shorthand(12px, 700, 14px);
 }
 
 %list-level-1 {
