--- a/wp-content/themes/mitm/assets/sass/bootstrap/_grid.scss
+++ b/wp-content/themes/mitm/assets/sass/bootstrap/_grid.scss
@@ -9,10 +9,14 @@
 
 .container {
   @include container-fixed();
-
+ @media (min-width: $screen-xs-min) {
+    //width: $container-xs;
+  }
   @media (min-width: $screen-sm-min) {
     width: $container-sm;
   }
+
+
  /* @media (min-width: $screen-md-min) {
     width: $container-md;
   }
