--- a/wp-content/themes/mitm/assets/sass/bootstrap/_variables.scss
+++ b/wp-content/themes/mitm/assets/sass/bootstrap/_variables.scss
@@ -317,6 +317,10 @@ $grid-float-breakpoint-max: ($grid-float-breakpoint - 1) !default;
 //== Container sizes
 //
 //## Define the maximum width of `.container` for different screen sizes.
+// Small screen / mobile
+$container-mobile:             ((480px - $grid-gutter-width)) !default;
+//** For `$screen-sm-min` and up.
+$container-xs:                 $container-mobile !default;
 
 // Small screen / tablet
 $container-tablet:             ((720px + $grid-gutter-width)) !default;
