--- a/wp-content/themes/mitm/assets/sass/global/_fonts.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_fonts.scss
@@ -2,11 +2,10 @@
 // Fonts
 // --------------------------------------------------
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic,300,300italic);
-
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,300);
-
 @import url(http://fonts.googleapis.com/css?family=Lobster);
 @import url(http://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700,700italic);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 %merriweather {
     font-family: 'Merriweather', serif;
@@ -24,6 +23,9 @@
 }
 %MyriadPro {
     font-family: 'Myriad Pro Regular';
+}
+%OpenSans{
+	font-family: 'Open Sans', sans-serif;
 }
 
 @font-face {
