--- a/wp-content/themes/mitm/assets/sass/pages/_about.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_about.scss
@@ -4,6 +4,9 @@
 
 .about-page {
     margin-bottom: 65px;
+    .page-section {
+        padding-top: 6px;
+    }
     h2 {
         @extend %text-center;
         @extend %heading-level-2;
@@ -25,7 +28,7 @@
         margin: 35px 0 20px 0;
     }
     .writer {
-        margin: 0 0 0;
+        margin: 0 0 64px;
         @include clearfix;
         img {
             margin: 8px 25px 0 0px;
@@ -38,7 +41,7 @@
         }
     }
     .about_imgs_set {
-        margin: 50px 0 55px;
+        margin: 46px 0 40px;
         img {
             margin-bottom: 16px;
         }
