--- a/wp-content/themes/mitm/assets/sass/pages/_home.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_home.scss
@@ -2,7 +2,7 @@
 // Home page 
 // --------------------------------------------------
 .home {
-    header,footer {
+    header, footer {
         overflow: hidden;
     }
     .bx-wrapper {
@@ -20,20 +20,48 @@
                 line-height: 12px;
                 margin-top: 14px;
             }
+            @media (max-width: $screen-sm-min) {
+                padding: 20px 30px;
+                width: auto;
+                min-height: 114px;
+                @include font-shorthand(20px, 700, 24px);
+            }
         }
         figure {
             background: url(../images/net_img.png) repeat-x left top;
             img {
-            position: relative;
-            z-index: -1;
-            width: auto;
-            height: 370px; 
-            margin: auto;
-            @media (max-width: $screen-sm-min) { width: 100%;}
+                position: relative;
+                z-index: -1;
+                width: auto;
+                height: 370px;
+                margin: auto;
+                @media (max-width: $screen-sm-min) {
+                    width: 100%;
+                    height: auto;
+                }
             }
         }
         .bx-controls-direction {
             display: none;
+            @media (max-width: $screen-sm-min) {
+                display: block;
+                a {
+                    top: 70%;
+                    display: block;
+                    @include size(18px, 27px);
+                    &.bx-next {
+                        @include bg-img-center(next_arrow, png);
+                    }
+                    &.bx-prev {
+                        @include bg-img-center(prev_arrow, png);
+                    }
+                }
+            }
+        }
+        .bx-default-pager {
+            @media (max-width: $screen-sm-min) {
+                display: none;
+            }
         }
         .bx-default-pager {
             bottom: 0;
@@ -86,9 +114,24 @@
                     @extend %Lobster;
                     @extend %text-center;
                 }
+                @media (max-width: $screen-phone) {
+                    margin-bottom: 15px;
+                    figure {
+                        padding-bottom: 15px;
+                    }
+                }
             }
             &:nth-child(3n+1) {
                 margin: 0 13px !important;
+            }
+            @media (max-width: $screen-phone) {
+                &.post_thumbnail {
+                    width: auto;
+                    margin: 0 52px 33px;
+                }
+                &:nth-child(3n+1) {
+                    margin: 0 52px 33px !important;
+                }
             }
         }
     }
@@ -112,6 +155,9 @@
                     left: inherit;
                     right: -3px;
                 }
+                @media (max-width: $screen-phone) {
+                    display: none;
+                }
             }
             p {
                 border-bottom: 1px solid #ccc;
@@ -134,11 +180,14 @@
     .row.writer-section {
         margin: 0 0 25px;
         .section-title {
-            font-size: 43px;
-            line-height: 52px;
             padding: 45px 90px;
+            @include font-shorthand(43px, 700, 52px);
             @extend %text-center;
             @extend %Lobster;
+            @media (max-width: $screen-phone) {
+                padding: 5px 40px 15px;
+                @include font-shorthand(29px, 500, 35px);
+            }
         }
         section {
             margin: 23px 30px;
@@ -148,6 +197,11 @@
         figure {
             margin: 0 18px 0 0;
             @extend %pull-left;
+            @media (max-width: $screen-phone) {
+                margin: 0 0 30px 0;
+                text-align: center;
+                @include size(100%, auto);
+            }
         }
         article {
             width: 505px;
@@ -172,13 +226,29 @@
                 }
                 @include clearfix;
             }
+            @media (max-width: $screen-phone) {
+                text-align: center;
+                @include size(100%, auto);
+                .more {
+                    margin: 24px auto 0;
+                }
+            }
         }
     }
-    
+    @media (max-width: $screen-phone) {
+        .home-page {
+            .container {
+                padding: 0;
+                .collection-post {
+                    margin: 0;
+                }
+            }
+        }
+    }
 }
 
 .dummy_class {
-   // display: block !important;
+    // display: block !important;
     overflow: hidden;
 }
 
@@ -193,31 +263,41 @@
 }
 
 #welcome-screen {
-      padding-top: 127px;
+    padding-top: 127px;
     @include size(100%, 769px);
     @include bg-img-center(welcome_l, jpg);
     @media (max-width: $screen-sm-min) {
-          padding-top: 0;
+        padding-top: 0;
         @include size(100%, 1024px);
-    @include bg-img-center(welcome, jpg);
-            
-        }
+        @include bg-img-center(welcome, jpg);
+    }
+    @media (max-width: $screen-phone) {
+        padding-top: 0;
+        @include size(100%, 480px);
+        @include bg-img-center(welcome_s, jpg);
+    }
     .logo {
         font-size: 0;
         padding-top: 145px;
         @include bg-img-center(logo_l, png);
         @include size(100%, 258px);
+        @media (max-width: $screen-phone) {
+            background: none;
+        }
     }
     #go_btn {
-          margin: 158px auto 0;
-        
+        margin: 158px auto 0;
         display: block;
         font-size: 0;
         @include bg-img-center(welcome_arrow, png);
         @include size(74px, 87px);
-         @media (max-width: $screen-sm-min) {
+        @media (max-width: $screen-sm-min) {
             margin: 320px auto 0;
-         }
-
+        }
+        @media (max-width: $screen-phone) {
+            margin: 90px auto 0;
+            @include bg-img-center(welcome_arrow_s, png);
+            @include size(51px, 59px);
+        }
     }
 }
